# Sisop2-PIGS

./: .gitignore  CMakeLists.txt  README.md  test_comprehensive.py  test_election.py  test_pigs.py
src/: Utils.h
src/client/: Client.cpp  Client.h  Discovery.cpp  Discovery.h  Interface.cpp  Interface.h  Process.cpp  Process.h
src/server/: Discovery.cpp  Discovery.h  Interface.cpp  Interface.h  Multicast.cpp  Multicast.h  Process.cpp  Process.h  Server.cpp  Server.h
